--- a/web/src/app.postcss
+++ b/web/src/app.postcss
@@ -2,3 +2,58 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.text-secondary {
+	color: hsl(var(--sf));
+}
+
+.text-primary {
+	color: hsl(var(--pf));
+}
+
+.bg-reverse-primary {
+	background-color: hsl(var(--pc));
+}
+
+/* not needed as this is the default color provided by a theme
+.text-base-base {
+	color: hsl(var(--bc));
+}
+*/
+
+.text-base-100 {
+	--tw-text-opacity: 0.55;
+	color: hsla(var(--bc) / var(--tw-text-opacity, 1));
+}
+.text-base-200 {
+	--tw-text-opacity: 0.6;
+	color: hsla(var(--bc) / var(--tw-text-opacity, 1));
+}
+.text-base-300 {
+	--tw-text-opacity: 0.65;
+	color: hsla(var(--bc) / var(--tw-text-opacity, 1));
+}
+.text-base-400 {
+	--tw-text-opacity: 0.7;
+	color: hsla(var(--bc) / var(--tw-text-opacity, 1));
+}
+.text-base-500 {
+	--tw-text-opacity: 0.75;
+	color: hsla(var(--bc) / var(--tw-text-opacity, 1));
+}
+.text-base-600 {
+	--tw-text-opacity: 0.8;
+	color: hsla(var(--bc) / var(--tw-text-opacity, 1));
+}
+.text-base-700 {
+	--tw-text-opacity: 0.85;
+	color: hsla(var(--bc) / var(--tw-text-opacity, 1));
+}
+.text-base-800 {
+	--tw-text-opacity: 0.9;
+	color: hsla(var(--bc) / var(--tw-text-opacity, 1));
+}
+.text-base-900 {
+	--tw-text-opacity: 0.95;
+	color: hsla(var(--bc) / var(--tw-text-opacity, 1));
+}
