--- a/web/src/app.postcss
+++ b/web/src/app.postcss
@@ -43,3 +43,7 @@
 	--tw-text-opacity: 0.95;
 	color: hsla(var(--bc) / var(--tw-text-opacity, 1));
 }
+
+.text-title {
+	font-size: 3.75rem !important;
+}
